remove unused gson dependency add rout for send message telegram
