# src/main/java/dispatcher/telegramAPI/handlers/SendMessageHandler.java
@@ -1,43 +1,64 @@
-//package telegram.handlers;
-//
-//import com.google.gson.Gson;
-//import com.google.gson.reflect.TypeToken;
-//import com.sun.net.httpserver.HttpExchange;
-//import com.sun.net.httpserver.HttpHandler;
-//import telegram.config.GeneralData;
-//import telegram.http.HTTP;
-//import telegram.models.JsonModel;
-//import telegram.models.TelegramBotModel;
-//import telegram.unit.Converter;
-//
-//import java.util.HashMap;
-//
-//public class SendMessageHandler implements HttpHandler {
-//
-//    private GeneralData generalData = GeneralData.getInstance();
-//    private HTTP http = HTTP.getInstance();
-//
-//    @Override
-//    public void handle(HttpExchange httpExchange) {
-//        JsonModel jsonModel;
-//        try {
-//            jsonModel = new Gson().fromJson(Converter.getBodyFromHttpExchange(httpExchange), new TypeToken<JsonModel>() {}.getType());
-//            if (jsonModel == null) throw new Exception();
-//        } catch (Exception e){
-//            http.createResponse(httpExchange, 401, "{\"text\":\"Cannot convert json to model\"}");
-//            return;
-//        }
-////        TelegramBotModel telegramBotModelMap = generalData.getMapTelegramBot(jsonModel.getBot());
-////        if (telegramBotModelMap == null || !telegramBotModelMap.getState()) http.createResponse(httpExchange, 200, "{\"text\":\"The server is under maintenance\"}");
-////        else {
-//            HashMap<String, Object> respMessage = http.sendMessage(jsonModel.getBot(), jsonModel);
-//            if ((int)respMessage.get("code") == 200){
-//                http.createResponse(httpExchange, 200, "{\"text\":\"Success send to server \"}");
-//            } else {
-//                System.out.println("Problem with telegram");
-//                http.createResponse(httpExchange, 200, "{\"text\":\"Json parse error\"}");
-//            }
-////        }
-//        return;
-//    }
-//}
+package dispatcher.telegramAPI.handlers;
+
+import com.sun.net.httpserver.HttpExchange;
+import com.sun.net.httpserver.HttpHandler;
+import dispatcher.authToken.AuthTokenAPI;
+import dispatcher.http.HTTP;
+import dispatcher.system.config.SystemConfig;
+import dispatcher.telegramAPI.TelegramAPI;
+import dispatcher.telegramAPI.config.TelegramConfig;
+import dispatcher.telegramAPI.models.ResponseJsonModel;
+import dispatcher.unit.Converter;
+
+import java.util.HashMap;
+
+public class SendMessageHandler implements HttpHandler {
+
+    private HTTP http = HTTP.getInstance();
+    private AuthTokenAPI authTokenAPI = AuthTokenAPI.getInstance();
+    private SystemConfig systemConfig = SystemConfig.getInstance();
+    private TelegramConfig telegramConfig = TelegramConfig.getInstance();
+    private TelegramAPI telegramAPI = TelegramAPI.getInstance();
+
+    @Override
+    public void handle(HttpExchange httpExchange) {
+        Boolean validToken = authTokenAPI.validateToken(httpExchange,systemConfig.getPropertiesByKey("authTokenURL") + "/publicKey");
+        if (!validToken) {
+            http.createResponse(httpExchange, 401, "{\"error\": \"JWT token is invalid\"}", null);
+            return;
+        }
+
+        String body = Converter.getBodyFromHttpExchange(httpExchange);
+        if (body == null) {
+            http.createResponse(httpExchange, 401, "{\"text\":\"Body is empty\"}", null);
+            return;
+        }
+
+        ResponseJsonModel responseJsonModel = (ResponseJsonModel) Converter.convertStringToSpecificObject(body, ResponseJsonModel.class);
+        if (responseJsonModel == null){
+            http.createResponse(httpExchange, 500, "{\"text\":\"Cannot convert json to model\"}", null);
+            return;
+        }
+
+        String botName = (String) responseJsonModel.getTelegramDispatcher().get("botName");
+        if (botName == null) {
+            http.createResponse(httpExchange, 500, "{\"text\":\"Key of botName not found\"}", null);
+            return;
+        }
+
+        String botToken = telegramConfig.getTokenByBotName(botName);
+        if (botToken == null) {
+            http.createResponseWithLog(httpExchange, "info", 500, "not found bot", null);
+            return;
+        }
+
+        HashMap<String, Object> respMessage = telegramAPI.sendTelegramMessage(botToken, responseJsonModel);
+        if ((Integer)respMessage.get("code") != 200) {
+            http.createResponseWithLog(httpExchange, "info", 500,
+                    respMessage.get("error").toString(), null);
+            return;
+        }
+
+        http.createResponse(httpExchange, 200, "{\"status\":\"Success send to server \"}", null);
+    }
+}
